@@ -1,3 +1,8 @@
+2006-11-30        svu
+
+	* SqlPlugin.props, sql/preprocessors/VariableSubstitutor.java: fixing
+	variable substitution
+
 2006-11-29        svu
 
 	* SqlPlugin.props, sql/ResultSetWindowPopup.java,
